--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
-  },
-  "devDependencies": {}
+    "firebase": "^7.19.1",
+    "nuxt": "^2.14.12",
+    "vuexfire": "^3.0.1"
+  }
 }
