--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.3.0",
     "core-js": "^3.8.3",
     "firebase": "^7.19.1",
     "nuxt": "^2.14.12",
