--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/dotenv": "^1.3.0",
     "core-js": "^3.8.3",
     "firebase": "^7.19.1",
+    "moment": "^2.24.0",
     "nuxt": "^2.14.12",
     "vuexfire": "^3.0.1"
   }
